// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toContainMatchingElement provides contextual information for the message 1`] = `
Object {
  "actual": "Element tree for <div>:
 <div>
  <ul>
    <li>
      <User index={1} className=\\"userOne\\" />
    </li>
    <li>
      <User index={2} className=\\"userTwo\\" />
    </li>
  </ul>
</div>",
}
`;

exports[`toContainMatchingElement provides contextual information for the message 2`] = `
Object {
  "actual": "Element tree for <div>:
 <div>
  <ul>
    <li>
      <User index={1} className=\\"userOne\\" />
    </li>
    <li>
      <User index={2} className=\\"userTwo\\" />
    </li>
  </ul>
</div>",
}
`;

exports[`toContainMatchingElement provides contextual information for the message 3`] = `
Object {
  "actual": "Element tree for <div>:
 <div>
  <ul>
    <li>
      <User index={1} className=\\"userOne\\" />
    </li>
    <li>
      <User index={2} className=\\"userTwo\\" />
    </li>
  </ul>
</div>",
}
`;

exports[`toContainMatchingElement provides contextual information for the message 4`] = `
Object {
  "actual": "Element tree for <ul>:
 <ul>
  <li>
    <User index={1} className=\\"userOne\\" />
  </li>
  <li>
    <User index={2} className=\\"userTwo\\" />
  </li>
</ul>",
}
`;

exports[`toContainMatchingElement returns the message with the proper fail verbage 1`] = `"Expected <div> to not contain an element matching \\"Foo\\" but it did."`;

exports[`toContainMatchingElement returns the message with the proper fail verbage 2`] = `"Expected <div> to not contain an element matching \\".userThree\\" but it did."`;

exports[`toContainMatchingElement returns the message with the proper fail verbage 3`] = `"Expected <ul> to not contain an element matching \\"Bar\\" but it did."`;

exports[`toContainMatchingElement returns the message with the proper pass verbage 1`] = `"Expected <div> to contain at least one element matching \\"User\\" but none were found."`;

exports[`toContainMatchingElement returns the message with the proper pass verbage 2`] = `"Expected <div> to contain at least one element matching \\"[index=1]\\" but none were found."`;

exports[`toContainMatchingElement returns the message with the proper pass verbage 3`] = `"Expected <div> to contain at least one element matching \\"[index]\\" but none were found."`;

exports[`toContainMatchingElement returns the message with the proper pass verbage 4`] = `"Expected <ul> to contain at least one element matching \\"[index]\\" but none were found."`;
